Bug 54561 - server fails to start with zaphod configuration (regression)
Summary: server fails to start with zaphod configuration (regression)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-05 14:24 UTC by Nick Bowler
Modified: 2012-09-05 16:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (8.29 KB, text/plain)
2012-09-05 14:24 UTC, Nick Bowler
no flags Details
Xorg.0.log redux (8.19 KB, text/plain)
2012-09-05 14:53 UTC, Nick Bowler
no flags Details
Real backtrace (1.83 KB, text/plain)
2012-09-05 15:11 UTC, Nick Bowler
no flags Details

Description Nick Bowler 2012-09-05 14:24:51 UTC
Created attachment 66678 [details]
Xorg.0.log

After updating to latest git xf86-video-intel, my zaphod configuration bails
immediately when starting the X server.

[   294.964] Requested Entity already in use!
[   294.964] (II) intel(1): SNA compiled from 2.20.6-4-g0768ac4
[   294.965] (EE) 
[   294.965] (EE) Backtrace:
[   294.965] (EE) 0: /usr/bin/X (xorg_backtrace+0x36) [0x599a26]
[   294.965] (EE) 1: /usr/bin/X (0x400000+0x19d999) [0x59d999]
[   294.965] (EE) 2: /lib64/libpthread.so.0 (0x7f3a6178a000+0x10410) [0x7f3a6179a410]
[   294.965] (EE) 3: /usr/local/lib/xorg/modules/drivers/intel_drv.so (0x7f3a5f17c000+0x6ab66) [0x7f3a5f1e6b66]
[   294.965] (EE) 4: /usr/local/lib/xorg/modules/drivers/intel_drv.so (0x7f3a5f17c000+0x10c36) [0x7f3a5f18cc36]
[   294.965] (EE) 5: /usr/bin/X (0x400000+0x9d6cf) [0x49d6cf]
[   294.965] (EE) 6: /usr/bin/X (0x400000+0x9d826) [0x49d826]
[   294.965] (EE) 7: /usr/bin/X (0x400000+0x9dd5e) [0x49dd5e]
[   294.965] (EE) 8: /usr/bin/X (xf86CallDriverProbe+0x17) [0x46e777]
[   294.965] (EE) 9: /usr/bin/X (xf86BusConfig+0x7f) [0x46f12f]
[   294.965] (EE) 10: /usr/bin/X (InitOutput+0x8da) [0x47d09a]
[   294.965] (EE) 11: /usr/bin/X (0x400000+0x28163) [0x428163]
[   294.965] (EE) 12: /lib64/libc.so.6 (__libc_start_main+0xfd) [0x7f3a6041d4bd]
[   294.965] (EE) 13: /usr/bin/X (0x400000+0x27ec9) [0x427ec9]
[   294.965] (EE) 
[   294.965] (EE) Segmentation fault at address 0x0
[   294.965] 
Fatal server error:
[   294.965] Caught signal 11 (Segmentation fault). Server aborting

A quick bisect pinpoints the following commit:

0768ac4d195214825137152893deb74a87fcd11e is the first bad commit
commit 0768ac4d195214825137152893deb74a87fcd11e
Author: Dave Airlie <airlied@redhat.com>
Date:   Wed Jul 25 16:11:23 2012 +1000

    intel: add platform probing support.

    This allows the driver to be loaded by the platform loading code.

    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 c50993f9a7ca7d65c0b8d924734fdb9313c6dca4 a9b47c2c54ece3ab309db07f291ee439f85b0e90 M      src

Attaching the full Xorg log.

The board has a G45 GPU, running xorg-server 1.12.99.905 and libdrm 2.4.38.
Comment 1 Chris Wilson 2012-09-05 14:30:25 UTC
Can you attach the Xorg.0.log with today's build?
Comment 2 Nick Bowler 2012-09-05 14:53:58 UTC
Created attachment 66680 [details]
Xorg.0.log redux

Wasn't sure whether you you wanted me to update xf86-video-intel or Xorg, so I installed latest git of both and grabbed the resulting log.
Comment 3 Nick Bowler 2012-09-05 15:11:54 UTC
Created attachment 66681 [details]
Real backtrace

The backtrace in the log looks pretty useless, so here's one generated by gdb which seems significantly better.
Comment 4 Chris Wilson 2012-09-05 16:21:25 UTC
commit 1f5d5a37e57e63fa6e5b336a4847ce4422b89044
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 5 17:17:58 2012 +0100

    Add PlatformProbe to handle sharing of device entities
    
    Reported-by: Nick Bowler <nbowler@draconx.ca>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54561
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.